--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
   - "3.6.5"
 
 # command to run tests
-script: pytest --doctest -modules pytest_SPH.py
+script: pytest -modules pytest_SPH.py
