--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "3.6"
 
+install:
+    - pip install -r requirements.txt
+    - pip install pytest
+    
 # command to run tests
-script: python -m pytest
+script: python -m pytest_SPH.py
